[metadata]
name = nml_bag
version = attr: nml_bag.__version__
description = A simple Python package for working with ROS2 bag files
long_description = file: README.md, LICENSE.txt
keywords = ros2, bag
license = Mozilla Public License 2.0
classifiers =
    Programming Language :: Python :: 3
    
[options]
packages = nml_bag
install_requires =
    requests
    importlib-metadata; python_version < "3.8"

[options.entry_points]
console_scripts =
    run_example = nml_bag.example:main

